# salesops-openenv-v1

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  env.py  graders.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  server.py  tasks.py  validate.py
server/: app.py
