[project]
name = "salesops-openenv-v1"
version = "1.0.0"
description = "Enterprise CRM Workflow RL Environment for OpenEnv Hackathon"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "pydantic>=2.6.0",
    "openai>=1.14.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = [
    "tests",
]
